--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -7,13 +7,14 @@
   width: 298px;
   height: 54px;
   background: $Orange;
-  font-size: 15px;
   line-height: 22px;
   font-family: 'Roboto';
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
   color: #ffff;
+  font-size: 16px;
+  letter-spacing: 0em;
   &:hover{
     background: #E47209;
   }
@@ -22,5 +23,19 @@
   }
   &:disabled{
     background: $Gray;
+  }
+}
+
+@mixin arrow {
+  width: 62px;
+  height: 62px;
+  background: $Orange;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  color: #ffffff;
+  &:hover{
+    background: $Green;
   }
 }
