--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,4 +1,4 @@
-.fonts, .pick-a-ffriend .content .icons figure figcaption, .pick-a-ffriend .content .text p, .pick-a-ffriend .content .text h5, .pick-a-ffriend .content .text h4, .pick-a-ffriend .content h3, .pick-a-ffriend .content h2 {
+.fonts, .testimonials .container .testimonial p, .testimonials .container .testimonial .testim_header .descr, .testimonials .container .testimonial .testim_header .name, .testimonials h3, .pick-a-ffriend .content .icons figure figcaption, .pick-a-ffriend .content .text p, .pick-a-ffriend .content .text h5, .pick-a-ffriend .content .text h4, .pick-a-ffriend .content h3, .pick-a-ffriend .content h2, .pet_story {
   font-family: "Roboto";
   letter-spacing: 0em;
   text-align: left;
@@ -33,20 +33,20 @@ body {
   display: inline-flex;
   align-items: center;
 }
-.header .pet_story {
+
+.pet_story {
   position: relative;
   display: flex;
   align-items: center;
   border: 1px solid;
   width: 82px;
   height: 52px;
-  font-size: 19px;
-  line-height: 23px;
-  line-height: 23px;
+  font-size: 16px;
   font-weight: 400;
+  line-height: 22px;
   text-align: center;
 }
-.header .pet_story img {
+.pet_story img {
   position: absolute;
   top: 25px;
   left: 11px;
@@ -93,14 +93,16 @@ body {
   width: 298px;
   height: 54px;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+  font-size: 16px;
   line-height: 22px;
   font-family: "Roboto";
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
-  color: white;
-  font-size: 16px;
   letter-spacing: 0em;
+  color: white;
+  border: none;
 }
 .watch-favorite .btn_1:hover {
   background: #E47209;
@@ -173,14 +175,16 @@ body {
   width: 298px;
   height: 54px;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+  font-size: 16px;
   line-height: 22px;
   font-family: "Roboto";
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
-  color: white;
-  font-size: 16px;
   letter-spacing: 0em;
+  color: white;
+  border: none;
   top: 2454px;
 }
 .pets button:hover {
@@ -199,13 +203,14 @@ body {
   gap: 21px;
 }
 .pets .content .arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
   width: 62px;
   height: 62px;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  border-radius: 50%;
+  cursor: pointer;
   color: #ffffff;
 }
 .pets .content .arrow:hover {
@@ -345,14 +350,16 @@ body {
   width: 298px;
   height: 54px;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+  font-size: 16px;
   line-height: 22px;
   font-family: "Roboto";
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
-  color: white;
-  font-size: 16px;
   letter-spacing: 0em;
+  color: white;
+  border: none;
   top: 3397px;
 }
 .pick-a-ffriend button:hover {
@@ -363,6 +370,105 @@ body {
 }
 .pick-a-ffriend button:disabled {
   background: #767474;
+}
+
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 920px;
+  background-image: url("../../assets/images/leav_foto.png");
+  background-repeat: no-repeat;
+  background-position: right 645px;
+}
+.testimonials h3 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 47px;
+  text-align: center;
+  margin: 140px auto 48px;
+}
+.testimonials .container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.testimonials .container .testimonial {
+  border-radius: 20px;
+  width: 264px;
+  height: 387px;
+  padding: 2px;
+  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+.testimonials .container .testimonial > * {
+  border-radius: 20px;
+  background: #F1F3F2;
+  padding: 12px 15px 15px 15px;
+}
+.testimonials .container .testimonial .testim_header {
+  display: inline-flex;
+  gap: 10px;
+}
+.testimonials .container .testimonial .testim_header img {
+  width: 37px;
+  height: 37px;
+}
+.testimonials .container .testimonial .testim_header .name {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+}
+.testimonials .container .testimonial .testim_header .descr {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+}
+.testimonials .container .testimonial p {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  margin: 8px 0;
+  height: 305px;
+  overflow: hidden;
+}
+.testimonials progress {
+  align-self: center;
+  margin-top: 17px;
+  width: 596px;
+  cursor: pointer;
+}
+.testimonials button {
+  position: absolute;
+  left: calc(50% - 149px - 431px);
+  border-radius: 25px;
+  width: 298px;
+  height: 54px;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 22px;
+  font-family: "Roboto";
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0em;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  bottom: 181px;
+}
+.testimonials button:hover {
+  background: #E47209;
+}
+.testimonials button:active {
+  background: #4B9200;
+}
+.testimonials button:disabled {
+  background: #767474;
+}
+
+footer {
+  background: #000;
 }
 
 @-webkit-keyframes menu {
