fix: some style & func fixes

--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -1,5 +1,1 @@
-.fonts {
-  font-family: "Roboto";
-  letter-spacing: 0em;
-  text-align: left;
-}/*# sourceMappingURL=fonts.css.map */
+/*# sourceMappingURL=fonts.css.map */
